@@ -10,6 +10,8 @@ Cascading Change Log
 
   Fixed issue where c.t.h.PartitionTap would not throw an error if 'cascading.hadoop.hfs.combine.files' was enabled.
 
+  Added support for o.a.h.m.l.CombineFileInputFormat in the Hadoop specific c.t.h.PartitionTap implementation.
+
   Fixed issue where a failure to open or write a trap would pass the throwable up to the prior trap. Failures on trap
   io will now result in a c.f.Flow failure.
 
